--- a/app_user/templates/app_user/auth_base.html
+++ b/app_user/templates/app_user/auth_base.html
@@ -35,6 +35,7 @@
     <!-- App css-->
     <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/style.css' %}">
     <link id="color" rel="stylesheet" href="{% static 'main/assets/css/color-1.css' %}" media="screen">
+    <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/page-builder.css' %}">
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/select2.css' %}">
@@ -82,11 +83,9 @@
     <!-- Theme js-->
     <script src="{% static 'main/assets/js/script.js' %}"></script>
     <script src="{% static 'main/assets/js/theme-customizer/customizer.js' %}"></script>
-    <!-- login js-->
-    <!-- Plugin used-->
+    
 
-    <script src="{% static 'main/assets/js/counter/jquery.waypoints.min.js' %}"></script>
-    <script src="{% static 'main/assets/js/counter/jquery.counterup.min.js' %}"></script>
+    <
     <script src="{% static 'main/assets/js/counter/counter-custom.js' %}"></script>
     <script src="{% static 'main/assets/js/photoswipe/photoswipe.min.js' %}"></script>
     <script src="{% static 'main/assets/js/photoswipe/photoswipe-ui-default.min.js' %}"></script>
