--- a/resume/templates/resume/add_award.html
+++ b/resume/templates/resume/add_award.html
@@ -89,6 +89,35 @@
                             <input name="year" class="datepicker-here form-control digits" type="text" data-language="en" data-multiple-dates-separator=", " data-position="bottom left" placeholder="Year Awarded">
                         </div>
                     </div>
+                    <div id="myDIV">
+                      <div class="col-md-12 mb-2">
+                          <div class="mb-6">
+                            <label class="form-label">Award Title</label>
+                            <input type="text" name="award" class="form-control" placeholder="Title of your Award">
+                          </div>
+                        </div>
+                   
+                        
+                        <div class="col-md-12 mb-3">
+                          <div>
+                            <label class="form-label">Detail</label>
+                            <textarea name="detail" class="form-control" rows="5" placeholder="About Project"></textarea>
+                          </div>
+                        </div>
+
+                        <div class="col-md-12 mb-2">
+                          <div class="mb-6">
+                            <label class="form-label">Url</label>
+                            <input type="text" name="project" class="form-control" placeholder="possible link">
+                          </div>
+                        </div>
+                        <div class="col-md-12 mb-2">
+                        <div>
+                            <label class="form-label">Year</label>
+                            <input name="year" class="datepicker-here form-control digits" type="text" data-language="en" data-multiple-dates-separator=", " data-position="bottom left" placeholder="Year Awarded">
+                        </div>
+                    </div>
+                    </div>
                     
                       </div>
                        </div>
@@ -98,7 +127,8 @@
                       
                       <!--<a class="btn btn-secondary" href="{% url 'resume:update_resume3' %}">Next</a>
                       <a class="btn btn-primary" href="{% url 'app_user:app' %}">Skip</a>-->
-                      <button style="width: 100%" class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
+                      <p class="btn btn-secondary" onclick="myFunction()">Add Award</p>
+                      <button  class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
                     
                     </div>
                   </form>
@@ -165,6 +195,27 @@
         </footer>
       </div>
     </div>
+<style>
+#myDIV {
+  
+  
+  display: none;
+}
+</style>
+
+
+
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myDIV");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
 {% endblock %}
 
