--- a/resume/templates/resume/add_project.html
+++ b/resume/templates/resume/add_project.html
@@ -82,6 +82,29 @@
                             <input type="text" name="project" class="form-control" placeholder="github/linkedIn or other links">
                           </div>
                         </div>
+                        <div id="myDIV">
+                        <div class="col-md-12 mb-2">
+                          <div class="mb-6">
+                            <label class="form-label">Add Project</label>
+                            <input type="text" name="project" class="form-control" placeholder="Project Title">
+                          </div>
+                        </div>
+                   
+                        
+                        <div class="col-md-12 mb-3">
+                          <div>
+                            <label class="form-label">Add Detail</label>
+                            <textarea name="detail" class="form-control" rows="5" placeholder="About Project"></textarea>
+                          </div>
+                        </div>
+
+                        <div class="col-md-12 mb-2">
+                          <div class="mb-6">
+                            <label class="form-label">Add Url</label>
+                            <input type="text" name="project" class="form-control" placeholder="github/linkedIn or other links">
+                          </div>
+                        </div>
+                      </div>
                     
                       </div>
                        </div>
@@ -91,7 +114,8 @@
                       
                       <!--<a class="btn btn-secondary" href="{% url 'resume:update_resume3' %}">Next</a>
                       <a class="btn btn-primary" href="{% url 'app_user:app' %}">Skip</a>-->
-                      <button style="width: 100%" class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
+                      <p class="btn btn-secondary" onclick="myFunction()">Add Project</p>
+                      <button class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
                     
                     </div>
                   </form>
@@ -158,6 +182,28 @@
         </footer>
       </div>
     </div>
+
+<style>
+#myDIV {
+  
+  
+  display: none;
+}
+</style>
+
+
+
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myDIV");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
 {% endblock %}
 
