--- a/resume/templates/resume/add_skill.html
+++ b/resume/templates/resume/add_skill.html
@@ -90,15 +90,48 @@
                             <input name="date_to" class="datepicker-here form-control digits" type="text" data-language="en" data-multiple-dates-separator=", " data-position="bottom left" placeholder="To">
                         </div>
                     </div>
+                    <div id="myDIV">
+                    <div class="col-md-12 mb-2">
+                          <div class="mb-6">
+                            <label class="form-label">Add Skill</label>
+                            <input type="text" name="skill" class="form-control" placeholder="Add Skill">
+                          </div>
+                        </div>
+                   
+                        
+                        <div class="col-md-12 mb-3">
+                          <div>
+                            <label class="form-label">Detail</label>
+                            <textarea name="detail" class="form-control" rows="5" placeholder="Tell us about it"></textarea>
+                          </div>
+                        </div>
+
+                        <div class="col-md-12 mb-2">
+                          <div>
+                            <label class="form-label">From</label>
+                            <input name="date_from" class="datepicker-here form-control digits" type="text" data-language="en" data-multiple-dates-separator=", " data-position="bottom left" placeholder="From">
+                        </div>
+                    </div>
+                    <div class="col-md-12 mb-2">
+                        <div>
+                            <label class="form-label">To</label>
+                            <input name="date_to" class="datepicker-here form-control digits" type="text" data-language="en" data-multiple-dates-separator=", " data-position="bottom left" placeholder="To">
+                        </div>
+                    </div>
                       </div>
+
+
+
                        </div>
+                     </div>
                     
                     
                     <div class="card-footer card-body btn-showcase">
                       
                       <!--<a class="btn btn-secondary" href="{% url 'resume:update_resume3' %}">Next</a>
                       <a class="btn btn-primary" href="{% url 'app_user:app' %}">Skip</a>-->
-                      <button style="width: 100%" class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
+                      <p class="btn btn-secondary" onclick="myFunction()">Add Skill</p>
+                      <button class="btn btn-primary" type="submit">Done ({{ app_user.resume.resume_cent }}%).</button>
                     
                     </div>
                   </form>
@@ -165,6 +198,28 @@
         </footer>
       </div>
     </div>
+
+<style>
+#myDIV {
+  
+  
+  display: none;
+}
+</style>
+
+
+
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myDIV");
+  if (x.style.display === "none") {
+    x.style.display = "block";
+  } else {
+    x.style.display = "none";
+  }
+}
+</script>
 
 {% endblock %}
 
