--- a/job/templates/job/my_applications.html
+++ b/job/templates/job/my_applications.html
@@ -12,11 +12,11 @@
             <div class="page-header">
               <div class="row">
                 <div class="col-sm-6">
-                  <h3>Learning List</h3>
+                  <h3>My Applications</h3>
                   <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Learning</li>
-                    <li class="breadcrumb-item active">Learning List</li>
+                    <li class="breadcrumb-item">Job</li>
+                    <li class="breadcrumb-item active">My Applications</li>
                   </ol>
                 </div>
                 <div class="col-sm-6">
@@ -57,7 +57,7 @@
                               <h6>{{ item.title }}</h6></a>
                             <div class="blog-bottom-content">
                               <ul class="blog-social">
-                                <li>by: Paige Turner</li>
+                                <li>Company Name</li>
                                 <li><a href="{% url 'job:job_detail' item.id %}">View</a></li>
                               </ul>
                               <hr>
@@ -69,171 +69,15 @@
                     </div>
                   </div>
                   {% endfor %}
-                  <div class="col-xl-6 col-sm-6">
-                    <div class="card">
-                      <div class="blog-box blog-list row">
-                        <div class="col-xl-5 col-12"><img class="img-fluid sm-100-w" src="../assets/images/faq/1.jpg" alt=""></div>
-                        <div class="col-xl-6 col-12">
-                          <div class="blog-details">
-                            <div class="blog-date"><span>05</span> January 2021</div><a href="learning-detailed.html">
-                              <h6>Java Language </h6></a>
-                            <div class="blog-bottom-content">
-                              <ul class="blog-social">
-                                <li>by: Paige Turner</li>
-                                <li>15 Hits</li>
-                              </ul>
-                              <hr>
-                              <p class="mt-0">inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit.inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit.inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  
 
-                  <div class="col-xl-6 col-sm-6">
-                    <div class="card">
-                      <div class="blog-box blog-list row">
-                        <div class="col-xl-5 col-12"><img class="img-fluid sm-100-w" src="../assets/images/faq/2.jpg" alt=""></div>
-                        <div class="col-xl-7 col-12">
-                          <div class="blog-details">
-                            <div class="blog-date"><span>10</span> March 2019</div><a href="learning-detailed.html">
-                              <h6>Web Development </h6></a>
-                            <div class="blog-bottom-content">
-                              <ul class="blog-social">
-                                <li>by: Petey Cruiser</li>
-                                <li>34 Hits</li>
-                              </ul>
-                              <hr>
-                              <p class="mt-0">inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit.inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit.inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/3.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>Web Devlopment.</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/1.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>Web Design.</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/4.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>UX Development.</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/2.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>Spoken English</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/4.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>Web Devlopment.</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="col-xl-4 xl-50 col-sm-6 box-col-6">
-                    <div class="card">
-                      <div class="product-box learning-box">
-                        <div class="product-img"><img class="img-fluid top-radius-blog" src="../assets/images/faq/3.jpg" alt="">
-                          <div class="product-hover">
-                            <ul>
-                              <li><a href="learning-detailed.html"><i class="icon-link"></i></a></li>
-                              <li><a href="learning-detailed.html"><i class="icon-import"></i></a></li>
-                            </ul>
-                          </div>
-                        </div>
-                        <div class="details-main"><a href="learning-detailed.html">                                       
-                            <div class="bottom-details"> 
-                              <h6>Advance Design.</h6>
-                            </div></a>
-                          <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has.</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+                  
+                  
+                  
+                  
+                  
+                  
+                 
               
                         
                             </div>
