--- a/app_user/templates/app_user/auth_base.html
+++ b/app_user/templates/app_user/auth_base.html
@@ -39,7 +39,7 @@
     <!-- Responsive css-->
     <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/responsive.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/select2.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/tour.css' %}">
+    <!--<link rel="stylesheet" type="text/css" href="{% static 'main/assets/css/tour.css' %}">-->
   </head>
   <body>
     <!-- Loader starts-->
@@ -85,13 +85,13 @@
     <script src="{% static 'main/assets/js/theme-customizer/customizer.js' %}"></script>
     
 
-    <
+    <!--
     <script src="{% static 'main/assets/js/counter/counter-custom.js' %}"></script>
     <script src="{% static 'main/assets/js/photoswipe/photoswipe.min.js' %}"></script>
     <script src="{% static 'main/assets/js/photoswipe/photoswipe-ui-default.min.js' %}"></script>
     <script src="{% static 'main/assets/js/photoswipe/photoswipe.js' %}"></script>
     <script src="{% static 'main/assets/js/tour/intro.js' %}"></script>
     <script src="{% static 'main/assets/js/tour/intro-init.js' %}"></script>
-    <script src="{% static 'main/assets/js/tooltip-init.js' %}"></script>
+    <script src="{% static 'main/assets/js/tooltip-init.js' %}"></script>-->
   </body>
 </html>
