--- a/app_user/templates/app_user/sign_up.html
+++ b/app_user/templates/app_user/sign_up.html
@@ -103,7 +103,7 @@
                 </div>
                 
                
-                <p>Already have an account?<a class="ms-2" href="sign-in.html">Sign in</a></p>
+                <p>Already have an account?<a class="ms-2" href="{% url 'app_user:sign_in' %}">Sign in</a></p>
               </form>
             </div>
           </div>
