--- a/job/templates/job/my_applications.html
+++ b/job/templates/job/my_applications.html
@@ -14,7 +14,7 @@
                 <div class="col-sm-6">
                   <h3>My Applications</h3>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/app/">Home</a></li>
                     <li class="breadcrumb-item">Job</li>
                     <li class="breadcrumb-item active">My Applications</li>
                   </ol>
