--- a/resume/templates/resume/add_project.html
+++ b/resume/templates/resume/add_project.html
@@ -101,7 +101,7 @@
                         <div class="col-md-12 mb-2">
                           <div class="mb-6">
                             <label class="form-label">Add Url</label>
-                            <input type="text" name="project" class="form-control" placeholder="github/linkedIn or other links">
+                            <input type="text" name="link" class="form-control" placeholder="github/linkedIn or other links">
                           </div>
                         </div>
                       </div>
