--- a/resume/templates/resume/add_referee.html
+++ b/resume/templates/resume/add_referee.html
@@ -101,7 +101,7 @@
                         <div class="col-md-12 mb-2">
                           <div class="mb-6">
                             <label class="form-label">Phone</label>
-                            <input type="number" name="phone" class="form-control" placeholder="Phone Number">
+                            <input type="number" name="phone_no" class="form-control" placeholder="Phone Number">
                           </div>
                         </div>
 
@@ -114,7 +114,7 @@
                         <div class="col-md-12 mb-2">
                         <div class="mb-6">
                             <label class="form-label">Place of Work</label>
-                            <input class="form-control" name="year" type="text" name="place_of_work"  placeholder="Referees place of work">
+                            <input class="form-control" type="text" name="place_of_work"  placeholder="Referees place of work">
                         </div>
                     </div>
 
