--- a/app_user/templates/app_user/app2.html
+++ b/app_user/templates/app_user/app2.html
@@ -46,11 +46,11 @@
             <div class="page-header">
               <div class="row">
                 <div class="col-sm-6">
-                  <h3>Tour</h3>
+                  <h3>Welcome</h3>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Advance</li>
-                    <li class="breadcrumb-item active">Tour</li>
+                    <li class="breadcrumb-item"><a href="/app/">Home</a></li>
+                    <li class="breadcrumb-item">Aibra</li>
+                    <li class="breadcrumb-item active">Welcome</li>
                   </ol>
                 </div>
                 <div class="col-sm-6">
@@ -308,7 +308,7 @@
                         <div class="profile-post">
                           <div class="post-header">
                             <div class="media"><img class="img-thumbnail rounded-circle me-3" src="{% static 'main/assets/images/user/7.jpg' %}" alt="Generic placeholder image">
-                              <div class="media-body align-self-center"><a href="social-app.html">
+                              <div class="media-body align-self-center"><a href="">
                                   <h5 class="user-name">Emay Walter</h5></a>
                                 <h6>22 Hours ago</h6>
                               </div>
@@ -354,7 +354,7 @@
                         <div class="profile-post">
                           <div class="post-header">
                             <div class="media"><img class="img-thumbnail rounded-circle me-3" src="{% static 'main/assets/images/user/7.jpg' %}" alt="Generic placeholder image">
-                              <div class="media-body align-self-center"><a href="social-app.html">
+                              <div class="media-body align-self-center"><a href="#">
                                   <h5 class="user-name">Emay Walter</h5></a>
                                 <h6>5 Hours ago</h6>
                               </div>
@@ -403,7 +403,7 @@
                         <div class="profile-post">
                           <div class="post-header">
                             <div class="media"><img class="img-thumbnail rounded-circle me-3" src="{% static 'main/assets/images/user/7.jpg' %}" alt="Generic placeholder image">
-                              <div class="media-body align-self-center"><a href="social-app.html">
+                              <div class="media-body align-self-center"><a href="#">
                                   <h5 class="user-name">Emay Walter</h5></a>
                                 <h6>2 Hours ago</h6>
                               </div>
