--- a/app_user/templates/app_user/complete_sign_up.html
+++ b/app_user/templates/app_user/complete_sign_up.html
@@ -66,7 +66,7 @@
                 <div class="form-group">
                   <button class="btn btn-primary btn-block" type="submit" style="width: 100%">Done</button>
                 </div>
-                <p>Don't have account?<a class="ps-2" href="sign-up.html">Create Account</a></p>
+                <p>Don't have account?<a class="ps-2" href="/sign-up/">Create Account</a></p>
               </form>
             </div>
           </div>
