--- a/app_user/templates/app_user/header.html
+++ b/app_user/templates/app_user/header.html
@@ -6,8 +6,8 @@
       <div class="page-main-header">
         <div class="main-header-right row m-0">
           <div class="main-header-left">
-            <div class="logo-wrapper"><a href="index.html"><img width="50%" class="img-fluid" src="https://aibra.io/static/main/images/aibra4.png" alt=""></a></div>
-            <div class="dark-logo-wrapper"><a href="index.html"><img width="50%" class="img-fluid" src="https://aibra.io/static/main/images/aibra4.png" alt=""></a></div>
+            <div class="logo-wrapper"><a href="/app/"><img width="50%" class="img-fluid" src="https://aibra.io/static/main/images/aibra4.png" alt=""></a></div>
+            <div class="dark-logo-wrapper"><a href="/app/"><img width="50%" class="img-fluid" src="https://aibra.io/static/main/images/aibra4.png" alt=""></a></div>
             <div class="toggle-sidebar"><i class="status_toggle middle" data-feather="align-center" id="sidebar-toggle"></i></div>
           </div>
           <div class="left-menu-header col">
@@ -110,7 +110,7 @@
                 </ul>
               </li>
               <li class="onhover-dropdown p-0">
-                <button class="btn btn-primary-light" type="button"><a href="login_two.html"><i data-feather="log-out"></i>Log out</a></button>
+                <button class="btn btn-primary-light" type="button"><a href="#"><i data-feather="log-out"></i>Log out</a></button>
               </li>
             </ul>
           </div>
@@ -123,7 +123,7 @@
         <!-- Page Sidebar Start-->
         <header class="main-nav">
           <div class="sidebar-user text-center"><a class="setting-primary" href="javascript:void(0)"><i data-feather="settings"></i></a><img class="img-90 rounded-circle" src="{% static 'main/assets/images/dashboard/1.png' %}" alt="">
-            <div class="badge-bottom"><span class="badge badge-primary">New</span></div><a href="user-profile.html">
+            <div class="badge-bottom"><span class="badge badge-primary">New</span></div><a href="{% url 'wallet:update_profile' %}">
               <h6 class="mt-3 f-14 f-w-600">{{ app_user.user.first_name }} {{ app_user.user.last_name }}</h6></a>
             <p class="mb-0 font-roboto">Human Resources Department</p>
             <ul>
@@ -147,11 +147,20 @@
                     <div class="mobile-back text-end"><span>Back</span><i class="fa fa-angle-right ps-2" aria-hidden="true"></i></div>
                   </li>
                  
-                  <li class="dropdown"><a class="nav-link menu-title" href="/"><i data-feather="home"></i><span>Feeds</span></a>
-                  <li class="dropdown"><a class="nav-link menu-title" href="javascript:void(0)"><i data-feather="users"></i><span>Networks</span></a>
+                  <li class="dropdown"><a class="nav-link menu-title" href="/app/"><i data-feather="home"></i><span>Feeds</span></a>
+                  <li class="dropdown"><a class="nav-link menu-title" href="/resume/"><i data-feather="users"></i><span>Profile</span></a>
                     
                   </li>
-                  <li class="dropdown"><a class="nav-link menu-title" href="/job/"><i data-feather="briefcase"></i><span>Jobs</span></a>   
+                  <li class="dropdown"><a class="nav-link menu-title" href="javascript:void(0)"><i data-feather="briefcase"></i><span>Jobs</span></a> 
+                  <ul class="nav-submenu menu-content">
+                    <li><a href="{% url 'job:add_job' %}">Add Jobs</a></li>
+                      <li><a href="/job/">Available Jobs</a></li>
+                      <li><a href="{% url 'job:my_applications' %}">My Applications</a></li>
+                      <li><a href="/app/recruits/">All Applicants</a></li>
+
+                      
+                      
+                    </ul>  
                   </li>
                   <li class="sidebar-main-title">
                     <div>
@@ -163,6 +172,7 @@
                   </li>
                   <li class="dropdown"><a class="nav-link menu-title" href="javascript:void(0)"><i data-feather="download"></i><span>Update Resume</span></a>
                     <ul class="nav-submenu menu-content">
+
                       <li><a href="{% url 'resume:update_resume1' %}">Update Intro</a></li>
                       <li><a href="{% url 'resume:update_resume2' %}">Update Experience</a></li>
                       <li><a href="{% url 'resume:add_career' %}">Career</a></li>
