--- a/app_user/templates/app_user/sign_in.html
+++ b/app_user/templates/app_user/sign_in.html
@@ -65,21 +65,21 @@
                   <div class="checkbox">
                     <input id="checkbox1" type="checkbox">
                     <label class="text-muted" for="checkbox1">Remember password</label>
-                  </div><a class="link" href="forget-password.html">Forgot password?</a>
+                  </div><a class="link" href="#">Forgot password?</a>
                 </div>
                 <div class="form-group"><button style="width: 100%"  class="btn btn-primary btn-block float-right" type="submit">Sign in</button></div>
-                <div class="login-social-title">                
-                  <h5>Sign in with</h5>
+               <!-- <div class="login-social-title">                
+                  <h5>Join Us On</h5>
                 </div>
                 <div class="form-group">
                   <ul class="login-social">
                     <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="linkedin"></i></a></li>
                     <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="twitter"></i></a></li>
-                    <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="facebook"></i></a></li>
-                    <li><a href="https://www.instagram.com/login" target="_blank"><i data-feather="instagram">                  </i></a></li>
+                    <li><a href="https://www.linkedin.com/login" target="_blank"><i data-feather="discord"></i></a></li>
+                    <li><a href="https://www.instagram.com/login" target="_blank"><i data-feather="github">                  </i></a></li>
                   </ul>
-                </div>
-                <p>Don't have account?<a class="ms-2" href="sign-up.html">Create Account</a></p>
+                </div>-->
+                <p>Don't have account?<a class="ms-2" href="{% url 'app_user:sign_in' %}">Create Account</a></p>
               </form>
             </div>
           </div>
