--- a/job/templates/job/add_job.html
+++ b/job/templates/job/add_job.html
@@ -11,11 +11,11 @@
             <div class="page-header">
               <div class="row">
                 <div class="col-sm-6">
-                  <h3>Edit Profile</h3>
+                  <h3>Add Jobs</h3>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Users</li>
-                    <li class="breadcrumb-item active">Edit Profile</li>
+                    <li class="breadcrumb-item"><a href="/app/">Home</a></li>
+                    <li class="breadcrumb-item">Jobs</li>
+                    <li class="breadcrumb-item active">Add Jobs</li>
                   </ol>
                 </div>
                 <div class="col-sm-6">
@@ -106,7 +106,7 @@
                     <div class="col-md-6 mb-2">
                         	<div>
                             <label class="form-label">Email</label>
-                            <input name="email" class=" form-control" type="email" placeholder="email">
+                            <input name="contact_email" class=" form-control" type="email" placeholder="email">
                         </div>
                         
                     </div>
