--- a/job/templates/job/job_applications.html
+++ b/job/templates/job/job_applications.html
@@ -13,9 +13,9 @@
                 <div class="col-sm-6">
                   <h3>See Who Applied</h3>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                    <li class="breadcrumb-item">Users</li>
-                    <li class="breadcrumb-item active">User Cards</li>
+                    <li class="breadcrumb-item"><a href="/app/">Home</a></li>
+                    <li class="breadcrumb-item">Vacancies</li>
+                    <li class="breadcrumb-item active">Who Applied</li>
                   </ol>
                 </div>
                 <div class="col-sm-6">
@@ -57,22 +57,10 @@
                   </ul>
                   <div class="text-center profile-details"><a href="{% url 'app_user:app_user_detail' item.app_user.id %}">
                       <h4>{{ item.app_user.user.first_name }} {{ item.app_user.user.last_name }}</h4></a>
-                    <h6>Manager</h6>
+                    <h6>Full Stack</h6>
+                    <a href="{% url 'app_user:app_user_detail' item.app_user.id %}" class="btn btn-primary-light">View Resume</a>
                   </div>
-                  <div class="card-footer row">
-                    <div class="col-4 col-sm-4">
-                      <h6>Follower</h6>
-                      <h3 class="counter">9564</h3>
-                    </div>
-                    <div class="col-4 col-sm-4">
-                      <h6>Following</h6>
-                      <h3><span class="counter">49</span>K</h3>
-                    </div>
-                    <div class="col-4 col-sm-4">
-                      <h6>Total Post</h6>
-                      <h3><span class="counter">96</span>M</h3>
-                    </div>
-                  </div>
+                  
                 </div>
               </div>
               {% endfor %}
