--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -13,7 +13,7 @@
                 <div class="col-sm-6">
                   <h3>Job Details</h3>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                    <li class="breadcrumb-item"><a href="/app/">Home</a></li>
                     <li class="breadcrumb-item">Job Search</li>
                     <li class="breadcrumb-item active">Job Details</li>
                   </ol>
@@ -287,9 +287,9 @@
                     <div class="card">
                       <div class="job-search">
                         <div class="card-body">
-                          <div class="media"><img class="img-40 img-fluid m-r-20" src="../assets/images/job-search/2.jpg" alt="">
+                          <div class="media"><img class="img-40 img-fluid m-r-20" src="{% static 'main/assets/images/job-search/2.jpg' %}" alt="">
                             <div class="media-body">
-                              <h6 class="f-w-700"><a href="javascript:void(0)">{{ item.title }}</a><span class="badge badge-primary pull-right">New</span></h6>
+                              <h6 class="f-w-700"><a href="{% url 'job:job_detail' item.id %}">{{ item.title }}<span class="badge badge-primary pull-right">View</span></a></h6>
                               <p>San <span>Diego, CA</span></p>
                               <ul class="rating">
                                 <li><i class="fa fa-star font-warning"></i></li>
@@ -300,7 +300,7 @@
                               </ul>
                             </div>
                           </div>
-                          <p>Ideally 2+ years experience with React. Bonus points if you have React Native experience. This is an incredibly exciting opportunity to gain commercial , Professional experience of React Native and other front end frameworks. Transform product wireframes into responsive, mobile user interface components and</p>
+                          <p>{{ item.description|truncatewords:34 }}</p>
                         </div>
                       </div>
                     </div>
