--- a/wallet/templates/wallet/update_profile.html
+++ b/wallet/templates/wallet/update_profile.html
@@ -82,8 +82,8 @@
                         
                         <div class="col-sm-6 col-md-4">
                           <div class="mb-3">
-                            <label class="form-label">Postal Code</label>
-                            <input class="form-control" type="number" placeholder="ZIP Code">
+                            <label class="form-label">Age</label>
+                            <input name="age" placeholder="Age" value="{{ app_user.age }}" class="form-control" type="number">
                           </div>
                         </div>
                         
